--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Lexnova | Inteligencia artificial en el ámbito legal</title>
+    <meta name="description" content="Desarrollamos soluciones de Inteligencia artificial en el ámbito legal.">
   </head>
   <body>
     <noscript>
